# thiagorufino1

./: README.md
Dashboard/: 8. Grafico de linha suavizada com area gradiente.json  Dashboard.pptx.txt  Dashboard2.pptx.txt  Intune - Remediation.pbix
IA/ai-docs-analytics-credit-card/: .env  README.md  app.py  requirements.txt
IA/ai-docs-translator/: .env  README.md  app.py  requirements.txt
IA/ms-agent-framework-copilot-studio/: .env.example  .gitignore  README.md  app.py  pyproject.toml
IA/ms-agent-framework-copilot-studio/core/: config.py  copilot_client.py  logging_config.py  router.py  session_store.py
IA/ms-agent-framework-copilot-studio/core/tools/: copilot_tools.py
IA/ms-agent-framework-copilot-studio/tests/: conftest.py  test_config.py  test_copilot_client.py  test_router.py  test_session_store.py
IA/ms-sdk-m365-agent/: .gitignore  README.md
IA/ms-sdk-m365-agent-copilot-studio/: .gitignore  README.md  m365agents.yml
Intune/Bios Password/: detect-bios-password.ps1  get-secret-key-vault.ps1  remediation-bios-password.ps1
Intune/CIS Benchmark/: Windows10 (L1).json  Windows10 (L2).json
Intune/Password Change Notification/: PasswordChangeNotification_check.ps1  PasswordChangeNotification_remediation.ps1  README.md
Intune/Primary User/: device-primary-user-check.ps1  device-primary-user-remediation.ps1  get-primary-user.ps1
Intune/Software AutoUpdate/: Update-Apps.ps1  teste.py
Python/: app.py  app2.py  gemini.py  microsoft-graph-gui.py  microsoft-graph-script.py  score.py  system-information.py  widget-demo.py
(+54 files in other folders)
